<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_reset"
        android:onClick="onResetSelected"
        android:orderInCategory="100"
        android:title="@string/ticket_menu_reset"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_goto_save"
        android:onClick="onGotoSaveSelected"
        android:orderInCategory="100"
        android:title="@string/ticket_menu_goto_save"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_goto_transparent"
        android:onClick="onGotoTransparentSelected"
        android:orderInCategory="100"
        android:title="@string/ticket_menu_goto_transparent_save"
        app:showAsAction="never" />
</menu>